# xfel_cmake

./: CMakeLists.txt  MANIFEST.in  README.md  generate_console_scripts.py  prepare_xfel.sh  pyproject.toml  rewire_xfel.sh
cmake/Modules/: FindDIALS.cmake
src/xfel/: CMakeLists.txt
